# Eric_Composer_Studio

./: .gitignore  LICENSE.txt  README.md  __init__.py  pyproject.toml  requirements.txt
core/: __init__.py  draw.py  model_manager.py  pose_types.py  skeleton_def.py
nodes/: __init__.py  canvas_crop.py  depth_composer.py  detector.py  editor.py  image_composer.py  load_pose.py  poisson_blend.py  pose_composer.py  renderer.py  save_pose.py  text_layer.py  transform.py
web/: depth_composer.js  image_composer.js  load_pose.js  pose_composer.js  text_layer.js
