[project]
name        = "eric-composer-studio"
description = "High-quality pose detection plus interactive multi-layer image, depth, and pose compositing for ComfyUI. Uses RTMW-x / DWPose via rtmlib ONNX, and adds canvas-based image, depth, and text-layer composers with blend modes, drop shadows, and per-layer transforms."
version     = "1.0.1"
license     = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/EricRollei/Eric_Composer_Studio"
Homepage   = "https://github.com/EricRollei/Eric_Composer_Studio"

[tool.comfy]
PublisherId = "ericrollei"
DisplayName = "Eric Composer Studio"
Icon        = ""
Tags        = [
    "pose detection",
    "openpose",
    "rtmw",
    "dwpose",
    "depth map",
    "depth compositing",
    "image composition",
    "compositing",
    "text overlay",
    "controlnet",
    "composition",
    "skeleton",
    "rtmlib",
]
